IDA-2132 #comment added the relavent files to build text from external source. Sub-task 3 complete, commiting to roll back if necessary

--- a/public/safetyInformation.html
+++ b/public/safetyInformation.html
@@ -98,7 +98,7 @@
     of Lorem Ipsum.
     <br />
 </div>
-<div title="isi2">
+<!-- <div title="isi2">
     <p>IMPORTANT SAFETY INFORMATION</p>
     <h3>Subhead 1</h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the
     industry's standard dummy text ever since the 1500s,
@@ -190,11 +190,11 @@
     only
     five centuries,
     but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with
-    the
+    theS
     release of
     Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
     PageMaker
     including versions
     of Lorem Ipsum.
     <br />
-</div>
+</div> -->
