IDA-2132 #commit before migrating to seperate component

--- a/public/presentation_viewer/presentations/default/isiDocuments/isi2.html
+++ b/public/presentation_viewer/presentations/default/isiDocuments/isi2.html
@@ -5,157 +5,187 @@
 
     <div title="isi2">
 
-        <h3>Subhead A</h3>Lorem ipsum dolor sit amet consectetur adipiscing, elit rutrum eleifend senectus porttitor,
-        massa
-        montes curabitur a sapien. Mus urna torquent gravida ad lobortis justo suspendisse, dui semper aliquam montes
-        orci
-        varius, non senectus facilisis nisl diam potenti. Ullamcorper proin fames tempor quisque scelerisque odio, nibh
-        tortor torquent vivamus posuere phasellus, velit dignissim pulvinar ante volutpat.
-        Proin viverra quisque a malesuada nostra habitant commodo pretium, arcu lectus donec etiam suscipit phasellus.
-        Nulla
-        interdum tortor sapien facilisis at eget mus nunc sociis convallis volutpat, rhoncus scelerisque hac pharetra
-        pellentesque quis ut laoreet accumsan luctus congue mollis, sed nullam sociosqu eleifend neque lacinia velit
-        felis
-        non turpis. Hendrerit sem convallis cubilia sapien facilisi turpis pharetra primis phasellus, libero mus
-        suspendisse
-        porttitor non nisl vestibulum nam, dictumst dui sociosqu pellentesque felis luctus euismod aliquam. Vel
-        ridiculus
-        per est non ornare dictumst nascetur tempor diam iaculis facilisis sociis, enim quis felis pellentesque nam
-        curae
-        cubilia aliquam dui at eleifend.
+        <h3>Subhead A</h3>
+        <li>
+            <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has
+                been
+                the
+                industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+                survived
+                not
+                only
+                five centuries,
+                but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in
+                the
+                1960s
+                with
+                the
+                release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus
+                PageMaker
+                including versions
+                of Lorem Ipsum.
+            </div>
+        </li>
+        <br />
+
+        <h3>Subhead B</h3>
+        <li>
+            <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has
+                been
+                the
+                industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+                survived
+                not
+                only
+                five centuries,
+                but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in
+                the
+                1960s
+                with
+                the
+                release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus
+                PageMaker
+                including versions
+                of Lorem Ipsum.
+            </div>
+        </li>
+        <br />
+
+        <h3>Subhead C</h3>
+        <li>
+            <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has
+                been
+                the
+                industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+                survived
+                not
+                only
+                five centuries,
+                but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in
+                the
+                1960s
+                with
+                the
+                release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus
+                PageMaker
+                including versions
+                of Lorem Ipsum.
+            </div>
+        </li>
+        <br />
+
+        <h3>Subhead D</h3>
+        <li>
+            <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has
+                been
+                the
+                industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+                survived
+                not
+                only
+                five centuries,
+                but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in
+                the
+                1960s
+                with
+                the
+                release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus
+                PageMaker
+                including versions
+                of Lorem Ipsum.
+            </div>
+        </li>
+        <br />
+
+        <h3>Subhead E</h3>
+        <li>
+            <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has
+                been
+                the
+                industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+                survived
+                not
+                only
+                five centuries,
+                but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in
+                the
+                1960s
+                with
+                the
+                release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus
+                PageMaker
+                including versions
+                of Lorem Ipsum.
+            </div>
+        </li>
+        <br />
+
+        <h3>Subhead F</h3>
+        <li>
+            <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has
+                been
+                the
+                industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+                survived
+                not
+                only
+                five centuries,
+                but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in
+                the
+                1960s
+                with
+                the
+                release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus
+                PageMaker
+                including versions
+                of Lorem Ipsum.
+            </div>
+        </li>
 
         <br />
 
-        <h3>Subhead B</h3>Lorem ipsum dolor sit amet consectetur adipiscing, elit rutrum eleifend senectus porttitor,
-        massa
-        montes curabitur a sapien. Mus urna torquent gravida ad lobortis justo suspendisse, dui semper aliquam montes
-        orci
-        varius, non senectus facilisis nisl diam potenti. Ullamcorper proin fames tempor quisque scelerisque odio, nibh
-        tortor torquent vivamus posuere phasellus, velit dignissim pulvinar ante volutpat.
-
-        Proin viverra quisque a malesuada nostra habitant commodo pretium, arcu lectus donec etiam suscipit phasellus.
-        Nulla
-        interdum tortor sapien facilisis at eget mus nunc sociis convallis volutpat, rhoncus scelerisque hac pharetra
-        pellentesque quis ut laoreet accumsan luctus congue mollis, sed nullam sociosqu eleifend neque lacinia velit
-        felis
-        non turpis. Hendrerit sem convallis cubilia sapien facilisi turpis pharetra primis phasellus, libero mus
-        suspendisse
-        porttitor non nisl vestibulum nam, dictumst dui sociosqu pellentesque felis luctus euismod aliquam. Vel
-        ridiculus
-        per est non ornare dictumst nascetur tempor diam iaculis facilisis sociis, enim quis felis pellentesque nam
-        curae
-        cubilia aliquam dui at eleifend.
-
-        <br />
-
-        <h3>Subhead C</h3>Lorem ipsum dolor sit amet consectetur adipiscing, elit rutrum eleifend senectus porttitor,
-        massa
-        montes curabitur a sapien. Mus urna torquent gravida ad lobortis justo suspendisse, dui semper aliquam montes
-        orci
-        varius, non senectus facilisis nisl diam potenti. Ullamcorper proin fames tempor quisque scelerisque odio, nibh
-        tortor torquent vivamus posuere phasellus, velit dignissim pulvinar ante volutpat.
-
-        Proin viverra quisque a malesuada nostra habitant commodo pretium, arcu lectus donec etiam suscipit phasellus.
-        Nulla
-        interdum tortor sapien facilisis at eget mus nunc sociis convallis volutpat, rhoncus scelerisque hac pharetra
-        pellentesque quis ut laoreet accumsan luctus congue mollis, sed nullam sociosqu eleifend neque lacinia velit
-        felis
-        non turpis. Hendrerit sem convallis cubilia sapien facilisi turpis pharetra primis phasellus, libero mus
-        suspendisse
-        porttitor non nisl vestibulum nam, dictumst dui sociosqu pellentesque felis luctus euismod aliquam. Vel
-        ridiculus
-        per est non ornare dictumst nascetur tempor diam iaculis facilisis sociis, enim quis felis pellentesque nam
-        curae
-        cubilia aliquam dui at eleifend.
-
-        of Lorem Ipsum.
-        <br />
-
-        <h3>Subhead D</h3>Lorem ipsum dolor sit amet consectetur adipiscing, elit rutrum eleifend senectus porttitor,
-        massa
-        montes curabitur a sapien. Mus urna torquent gravida ad lobortis justo suspendisse, dui semper aliquam montes
-        orci
-        varius, non senectus facilisis nisl diam potenti. Ullamcorper proin fames tempor quisque scelerisque odio, nibh
-        tortor torquent vivamus posuere phasellus, velit dignissim pulvinar ante volutpat.
-
-        Proin viverra quisque a malesuada nostra habitant commodo pretium, arcu lectus donec etiam suscipit phasellus.
-        Nulla
-        interdum tortor sapien facilisis at eget mus nunc sociis convallis volutpat, rhoncus scelerisque hac pharetra
-        pellentesque quis ut laoreet accumsan luctus congue mollis, sed nullam sociosqu eleifend neque lacinia velit
-        felis
-        non turpis. Hendrerit sem convallis cubilia sapien facilisi turpis pharetra primis phasellus, libero mus
-        suspendisse
-        porttitor non nisl vestibulum nam, dictumst dui sociosqu pellentesque felis luctus euismod aliquam. Vel
-        ridiculus
-        per est non ornare dictumst nascetur tempor diam iaculis facilisis sociis, enim quis felis pellentesque nam
-        curae
-        cubilia aliquam dui at eleifend.
-
-        <br />
-
-        <h3>Subhead E</h3>Lorem ipsum dolor sit amet consectetur adipiscing, elit rutrum eleifend senectus porttitor,
-        massa
-        montes curabitur a sapien. Mus urna torquent gravida ad lobortis justo suspendisse, dui semper aliquam montes
-        orci
-        varius, non senectus facilisis nisl diam potenti. Ullamcorper proin fames tempor quisque scelerisque odio, nibh
-        tortor torquent vivamus posuere phasellus, velit dignissim pulvinar ante volutpat.
-
-        Proin viverra quisque a malesuada nostra habitant commodo pretium, arcu lectus donec etiam suscipit phasellus.
-        Nulla
-        interdum tortor sapien facilisis at eget mus nunc sociis convallis volutpat, rhoncus scelerisque hac pharetra
-        pellentesque quis ut laoreet accumsan luctus congue mollis, sed nullam sociosqu eleifend neque lacinia velit
-        felis
-        non turpis. Hendrerit sem convallis cubilia sapien facilisi turpis pharetra primis phasellus, libero mus
-        suspendisse
-        porttitor non nisl vestibulum nam, dictumst dui sociosqu pellentesque felis luctus euismod aliquam. Vel
-        ridiculus
-        per est non ornare dictumst nascetur tempor diam iaculis facilisis sociis, enim quis felis pellentesque nam
-        curae
-        cubilia aliquam dui at eleifend.
-
-        <br />
-
-        <h3>Subhead F</h3>Lorem ipsum dolor sit amet consectetur adipiscing, elit rutrum eleifend senectus porttitor,
-        massa
-        montes curabitur a sapien. Mus urna torquent gravida ad lobortis justo suspendisse, dui semper aliquam montes
-        orci
-        varius, non senectus facilisis nisl diam potenti. Ullamcorper proin fames tempor quisque scelerisque odio, nibh
-        tortor torquent vivamus posuere phasellus, velit dignissim pulvinar ante volutpat.
-
-        Proin viverra quisque a malesuada nostra habitant commodo pretium, arcu lectus donec etiam suscipit phasellus.
-        Nulla
-        interdum tortor sapien facilisis at eget mus nunc sociis convallis volutpat, rhoncus scelerisque hac pharetra
-        pellentesque quis ut laoreet accumsan luctus congue mollis, sed nullam sociosqu eleifend neque lacinia velit
-        felis
-        non turpis. Hendrerit sem convallis cubilia sapien facilisi turpis pharetra primis phasellus, libero mus
-        suspendisse
-        porttitor non nisl vestibulum nam, dictumst dui sociosqu pellentesque felis luctus euismod aliquam. Vel
-        ridiculus
-        per est non ornare dictumst nascetur tempor diam iaculis facilisis sociis, enim quis felis pellentesque nam
-        curae
-        cubilia aliquam dui at eleifend.
-
-        <br />
-
-        <h3>Subhead G</h3>Lorem ipsum dolor sit amet consectetur adipiscing, elit rutrum eleifend senectus porttitor,
-        massa
-        montes curabitur a sapien. Mus urna torquent gravida ad lobortis justo suspendisse, dui semper aliquam montes
-        orci
-        varius, non senectus facilisis nisl diam potenti. Ullamcorper proin fames tempor quisque scelerisque odio, nibh
-        tortor torquent vivamus posuere phasellus, velit dignissim pulvinar ante volutpat.
-
-        Proin viverra quisque a malesuada nostra habitant commodo pretium, arcu lectus donec etiam suscipit phasellus.
-        Nulla
-        interdum tortor sapien facilisis at eget mus nunc sociis convallis volutpat, rhoncus scelerisque hac pharetra
-        pellentesque quis ut laoreet accumsan luctus congue mollis, sed nullam sociosqu eleifend neque lacinia velit
-        felis
-        non turpis. Hendrerit sem convallis cubilia sapien facilisi turpis pharetra primis phasellus, libero mus
-        suspendisse
-        porttitor non nisl vestibulum nam, dictumst dui sociosqu pellentesque felis luctus euismod aliquam. Vel
-        ridiculus
-        per est non ornare dictumst nascetur tempor diam iaculis facilisis sociis, enim quis felis pellentesque nam
-        curae
-        cubilia aliquam dui at eleifend.
+        <h3>Subhead G</h3>
+        <li>
+            <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has
+                been
+                the
+                industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+                survived
+                not
+                only
+                five centuries,
+                but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in
+                the
+                1960s
+                with
+                the
+                release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus
+                PageMaker
+                including versions
+                of Lorem Ipsum.
+            </div>
+        </li>
 
         <br />
     </div>
