--- a/public/presentation_viewer/presentations/default/isiDocuments/isi2.html
+++ b/public/presentation_viewer/presentations/default/isiDocuments/isi2.html
@@ -6,7 +6,7 @@
     <div title="isi2">
 
         <h3>Subhead A</h3>
-        <li>
+         <li type="square">
             <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has
                 been
                 the
@@ -32,7 +32,7 @@
         <br />
 
         <h3>Subhead B</h3>
-        <li>
+         <li type="square">
             <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has
                 been
                 the
@@ -58,7 +58,7 @@
         <br />
 
         <h3>Subhead C</h3>
-        <li>
+         <li type="square">
             <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has
                 been
                 the
@@ -84,7 +84,7 @@
         <br />
 
         <h3>Subhead D</h3>
-        <li>
+         <li type="square">
             <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has
                 been
                 the
@@ -110,7 +110,7 @@
         <br />
 
         <h3>Subhead E</h3>
-        <li>
+         <li type="square">
             <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has
                 been
                 the
@@ -136,7 +136,7 @@
         <br />
 
         <h3>Subhead F</h3>
-        <li>
+         <li type="square">
             <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has
                 been
                 the
@@ -163,7 +163,7 @@
         <br />
 
         <h3>Subhead G</h3>
-        <li>
+         <li type="square">
             <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has
                 been
                 the
