changes to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,7 @@
   <link rel="stylesheet" type="text/css" href="../presentation_viewer/presentations/default/css/bms_components.css">
 
   <!-- OR from veeva -->
-  <link rel="stylesheet" type="text/css"
-    href="../../shared/presentation_viewer/presentations/default/css/bms_components.css">
+  <link rel="stylesheet" type="text/css" href="../presentation_viewer/presentations/default/css/bms_components.css">
 
   <title>isitray</title>
 </head>
